--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,7 @@
 body {
 	background-color:var(--color-background);
 	height: 100vh;
+	overflow: scroll;
 }
 
 
@@ -379,6 +380,7 @@ section:nth-of-type(2) img {
 
 .complaints h1 {
 	font-size: 2em;
+	text-align: center;
 }
 
 .complaints h2 {
@@ -392,6 +394,7 @@ section:nth-of-type(2) img {
 	background-size: cover;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 
 .complaints section:first-of-type {
@@ -402,8 +405,6 @@ section:nth-of-type(2) img {
 	text-align: left;
 	display: grid;
 	grid-template-columns: 1fr;
-	align-items: left;
-
 }
 
 /* footer */
