--- a/styles/style.css
+++ b/styles/style.css
@@ -545,7 +545,7 @@ footer a {
 }
 
 .model5 {
-	background-image: url(images/auto5.webp);
+	background-image: url(../images/auto5.webp);
 }
 
 .model6 {
